<resources>
    <string name="app_name">Медицинские инструменты</string>
    <string name="networkErrorMessage">Произошла неизвестная ошибка при взаимодействии с сервером.</string>
    <string name="networkFailureMessage">Не удалось загрузить данные. Проверьте соединение с интернетом и повторите попытку.</string>
    <string name="networkButtonOk">Ок</string>
    <string name="emptyFavorites">Здесь пока пусто! \nВыбранные вами инструменты будут \nнаходится здесь.</string>
    <string name="functionalityIsInDevelopment">Functionality is in development</string>
    <string name="exit">Нажми</string>
    <string name="success">success</string>
    <string name="failure">failure</string>
    <string name="error">error</string>
    <!-- OnBoarding_Screen -->
    <string name="onBoardingTitle">Начни изучать хирургию вместе с мобильным справочником медицинских инструментов</string>
    <string name="onBoardingSingIn">Войти</string>
    <string name="onBoardingSingUp">Еще нет аккаунта? <b><u>Зарегистрироваться</u></b></string>
    <!-- SignIn_Screen-->
    <string name="signInTitle">Войти</string>
    <string name="signInTitleToolbar">Вход</string>
    <string name="signInEmail">E-mail</string>
    <string name="signInPassword">Пароль</string>
    <string name="signInPasswordHint">Минимум 6 символов</string>
    <string name="signInPasswordPassword">Забыли пароль?</string>
    <!-- SignUp_Screen -->
    <string name="signUpTitle">Зарегистрироваться</string>
    <string name="signUpTitleToolbar">Регистрация</string>
    <string name="singUpName">Имя пользователя</string>
    <string name="singUpEmail">E-mail</string>
    <string name="singUpSignIn">Уже есть аккаунт? <b><u>Войти</u></b></string>
    <!-- Recovery_Screen -->
    <string name="recoveryTitle">Восстановление пароля</string>
    <string name="recoverySubTitle">Введи свой E-mail и мы отправим  письмо с даннами необходимыми для входа!</string>
    <string name="recoverySend">Отправить</string>
    <!-- Main_Screen -->
    <string name="mainHome">Главная</string>
    <string name="mainTest">Испытание</string>
    <string name="mainFavorite">Избранное</string>
    <string name="mainProfile">Профиль</string>
    <string name="mainSubscribe">Оформить подписку</string>
    <string name="mainTitle">Что будем изучать сегодня?</string>
    <string name="mainName">Привет, %s!</string>
    <string name="mainCount">Инструментарий: %s</string>
    <!-- DetailCatalog_Screen -->
    <string name="detailCatalogTitle">Тема: %s</string>
    <string name="detailCatalogSubtitle">Раздел: %s</string>
    <!-- TestLevel_Screen-->
    <string name="testLevelTitle">Проверь свои знания!</string>
    <string name="testLevelSubTitle">Выбери подходящий уровень сложности </string>
    <string name="testLevelChangeCategory">Выбрать категории и начать</string>
    <string name="testLevelQuestion">%s вопросов</string>
    <!-- TestCategory_Screen-->
    <string name="testCategoryFavorite">Тест по избранному</string>
    <!-- Profile_Screen -->
    <string name="profileExit">Выйти</string>
    <string name="profileHeaderTitle">Проверь свои знания и пройди тестирование! Это поможет лучше усвоить темы. </string>
    <string name="profileResult">Ваш последний результат</string>
    <string name="profileReturn">Пройти тестирование</string>
    <string name="profileNext">Пройти тест заново</string>
    <string name="profileSubscribe">Подписка оформлена</string>
    <!-- Exit_Dialog-->
    <string name="exitTitle">Выйти из аккаунта?</string>
    <string name="exitNo">Нет</string>
    <string name="exitYes">Да</string>
    <!-- TestCategories_Screen-->
    <string name="testCategoriesSelection">Выбери категории</string>
    <string name="testCategoriesStart">Начать</string>
    <!-- Test_Screen -->
    <string name="testSelect">Следующий вопрос</string>
    <string name="testSelectGallery">Вперёд</string>
    <string name="backSelectGallery">Назад</string>
    <string name="testLevel">Уровень сложности: %s</string>
    <string name="testExit">Завершить тестирование</string>
    <!-- Result_Screen -->
    <string name="resultTitle">Ваш результат</string>
    <string name="resultOk">Ок</string>
    <string name="resultExit">Завершить</string>
    <string name="resultReturn">Пройти еще раз</string>

    <!-- Categories -->
    <string name="surgery">Общая хирургия</string>
    <string name="anesthesiology">Анестезиология</string>
    <string name="stomatology">Стоматология</string>
    <string name="gynecology">Акушерство и гинекология</string>
    <string name="neuro">Нейрохирургия</string>
    <string name="lor">ЛОР-инструменты</string>
    <string name="urology">Урология</string>
    <string name="ophthalmology">Офтальмология</string>

    <!-- Levels -->
    <string name="easy">Легкий уровень</string>
    <string name="middle">Средний уровень</string>
    <string name="hard">Сложный уровень</string>
</resources>