<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_ffffff"
    tools:context=".fragments.RecoveryFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_FFFFFFFF"
        app:elevation="@dimen/elevation0"
        app:liftOnScroll="false">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Default.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_collapseMode="pin"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/recoveryTitle"
            app:titleTextColor="@color/blue_5B67CA" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin16"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <TextView
            android:id="@+id/subTitle"
            style="@style/TextDarkNormal12Style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin18"
            android:text="@string/recoverySubTitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutEmail"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin26"
            android:textColorHint="@color/light_blue_CCB2B7E4"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="@color/background_selector_line"
            app:startIconDrawable="@drawable/ic_mail"
            app:startIconTint="@color/background_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/singUpEmail"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/send"
            style="@style/DefaultBlueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin40"
            android:text="@string/recoverySend"
            android:textSize="@dimen/size16"
            android:textStyle="normal" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>