<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.OnBoardingFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/boardingImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin45"
            android:src="@drawable/on_boarding_image"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/boardingLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_logo_boarding"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/boardingTitle"
            style="@style/TextDarkNormal14Style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin26"
            android:gravity="center"
            android:text="@string/onBoardingTitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signIn"
            style="@style/DefaultBlueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin16"
            android:layout_marginTop="@dimen/margin16"
            android:text="@string/onBoardingSingIn"
            android:textSize="@dimen/size16"
            android:textStyle="normal"
            app:rippleColor="@color/white_FFFFFFFF" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUp"
        style="@style/OnlyTextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/onBoardingSingUp"
        android:textColor="@color/blue_5B67CA"
        app:rippleColor="@color/blue_405B67CA" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>