<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin16"
    android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bgr_dialog"
        android:paddingBottom="@dimen/padding45"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            style="@style/TextDarkNormal16Style"
            android:layout_width="@dimen/margin0"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin20"
            android:layout_marginTop="@dimen/margin36"
            android:gravity="center"
            android:text="@string/exitTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin13"
            android:layout_marginTop="@dimen/margin18"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/no"
                style="@style/OutlinedButton"
                android:layout_width="@dimen/width145"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin5"
                android:layout_weight="1"
                android:text="@string/exitNo"
                android:textSize="@dimen/size16"
                android:textStyle="bold"
                app:rippleColor="@color/blue_5B67CA" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/yes"
                style="@style/DefaultBlueButton"
                android:layout_width="@dimen/width145"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin5"
                android:layout_weight="1"
                android:text="@string/exitYes"
                android:textSize="@dimen/size16"
                android:textStyle="bold"
                app:rippleColor="@color/white_FFFFFFFF" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
