<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_ffffff"
    tools:context=".fragments.SignUpFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_FFFFFFFF"
        app:elevation="@dimen/elevation0"
        app:liftOnScroll="false">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Default.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_collapseMode="pin"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/signUpTitleToolbar"
            app:titleTextColor="@color/blue_5B67CA" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin18"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutName"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin26"
            android:textColorHint="@color/light_blue_CCB2B7E4"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="@color/background_selector_line"
            app:startIconDrawable="@drawable/ic_user"
            app:startIconTint="@color/background_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/singUpName"
                android:imeOptions="actionNext"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutEmail"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin26"
            android:textColorHint="@color/light_blue_CCB2B7E4"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="@color/background_selector_line"
            app:startIconDrawable="@drawable/ic_mail"
            app:startIconTint="@color/background_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/singUpEmail"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutPassword"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin26"
            android:textColorHint="@color/light_blue_CCB2B7E4"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="@color/background_selector_line"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/background_input"
            app:startIconDrawable="@drawable/ic_password"
            app:startIconTint="@color/background_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signInPassword"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/loader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                app:indicatorColor="@color/blue_5B67CA"
                app:indicatorSize="@dimen/margin40"
                app:layout_constraintBottom_toBottomOf="@+id/signUp"
                app:layout_constraintEnd_toEndOf="@+id/signUp"
                app:layout_constraintStart_toStartOf="@+id/signUp"
                app:layout_constraintTop_toTopOf="@+id/signUp"
                app:trackThickness="@dimen/margin6" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signUp"
                style="@style/DefaultBlueButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin40"
                android:enabled="false"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/signUpTitle"
                android:textSize="@dimen/size16"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signIn"
        style="@style/OnlyTextButton"
        android:fontFamily="@font/montserrat_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/singUpSignIn"
        android:textColor="@color/blue_5B67CA"
        app:rippleColor="@color/blue_405B67CA" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>